[package]
name = "base"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
selinux = []
dyn_selinux = []

[build-dependencies]
cxx-gen = { workspace = true }

[dependencies]
cxx = { workspace = true }
libc = { workspace = true }
cfg-if = { workspace = true }
thiserror = { workspace = true }
argh = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
const_format = { workspace = true }
