[package]
name = "base"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
selinux = []

[lints]
workspace = true

[build-dependencies]
cxx-gen = { workspace = true }

[dependencies]
derive = { workspace = true }
cxx = { workspace = true }
libc = { workspace = true }
cfg-if = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
const_format = { workspace = true }
nix = { workspace = true, features = ["fs", "mount", "user"] }
bitflags = { workspace = true }
