[package]
name = "magiskboot"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[build-dependencies]
cxx-gen = { workspace = true }
pb-rs = { workspace = true }

[dependencies]
base = { path = "../base" }
cxx = { path = "../external/cxx-rs" }
byteorder = { workspace = true }
size = { workspace = true }
quick-protobuf = { workspace = true }
argh = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
x509-cert = { workspace = true }
der = { workspace = true, features = ["derive"] }
fdt = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
num-traits = { workspace = true }
