[package]
name = "magisk"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[build-dependencies]
cxx-gen = { workspace = true }
pb-rs = { workspace = true }

[dependencies]
base = { path = "../base", features = ["selinux"] }
cxx = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
quick-protobuf = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
