[package]
name = "magisk"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[features]
default = ["check-signature"]
check-signature = []

[build-dependencies]
cxx-gen = { workspace = true }
pb-rs = { workspace = true }

[dependencies]
base = { path = "../base", features = ["selinux"] }
derive = { path = "derive" }
cxx = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
quick-protobuf = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
bit-set = { workspace = true }
