[package]
name = "magiskinit"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[build-dependencies]
cxx-gen = { workspace = true }

[dependencies]
base = { path = "../base" }
magiskpolicy = { path = "../sepolicy", default-features = false }
cxx = { workspace = true }
