[package]
name = "magiskinit"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[lints]
workspace = true

[build-dependencies]
cxx-gen = { workspace = true }

[dependencies]
base = { workspace = true }
magiskpolicy = { workspace = true, features = ["no-main"] }
cxx = { workspace = true }
num-traits = { workspace = true }
