[package]
name = "magiskpolicy"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]
path = "lib.rs"

[build-dependencies]
cxx-gen = { workspace = true }

[features]
default = ["main"]
main = []

[dependencies]
base = { path = "../base" }
cxx = { workspace = true }
argh = { workspace = true }
