[package]
name = "magiskpolicy"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]
path = "lib.rs"

[build-dependencies]
cxx-gen = { workspace = true }

[features]
default = ["main"]
main = []

[dependencies]
base = { path = "../base" }
cxx = { workspace = true }
argh = { workspace = true }
