[package]
name = "magiskpolicy"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]
path = "lib.rs"

[features]
no-main = []

[lints]
workspace = true

[build-dependencies]
cxx-gen = { workspace = true }

[dependencies]
base = { workspace = true }
cxx = { workspace = true }
