cmake_minimum_required(VERSION 3.18.1)
project("bootctl")

add_subdirectory(android.hardware.boot@1.0)
add_subdirectory(android.hardware.boot@1.1)
add_subdirectory(android.hardware.boot@1.2)
add_subdirectory(android.hidl.base@1.0)
add_subdirectory(android.hidl.manager@1.0)
add_subdirectory(android.hidl.manager@1.1)
add_subdirectory(android.hidl.manager@1.2)
add_subdirectory(bootctl)
add_subdirectory(jsoncpp)
add_subdirectory(libbase)
add_subdirectory(libcutils)
add_subdirectory(libcxx)
add_subdirectory(libcxxabi)
add_subdirectory(libdl)
add_subdirectory(libhidl)
add_subdirectory(libhwbinder)
add_subdirectory(liblog)
add_subdirectory(libprocessgroup)
add_subdirectory(libsystem)
add_subdirectory(libutils)
add_subdirectory(libvndksupport)
